syntax = "proto2";

package ErrorProto;

option java_package = "io.github.jinganix.ddz.proto.error";

import "WebpbOptions.proto";
import "webpb/WebpbExtend.proto";

message ErrorMessage {
  option (m_opts).opt = {
    method: "POST"
    path: "/msg/error"
  };

  required ErrorCode code = 1 [(opts).java = {annotation: '@JsonProperty("{{_FIELD_NAME_}}")'}, (opts).ts = {auto_alias: false}];
  optional string message = 2 [(opts).java = {annotation: '@JsonProperty("{{_FIELD_NAME_}}")'}, (opts).ts = {auto_alias: false}];
  map<string, string> errors = 3;
}

enum ErrorCode {
  option (e_opts).java = {
    annotation: '@JsonDeserialize(using = EnumerationDeserializer.class)'
    annotation: '@JsonSerialize(using = EnumerationSerializer.class)'
    implements: "BusinessErrorCode"
  };

  OK = 0;
  ERROR = 1;
  BAD_REQUEST = 2;
  FORCE_LOGOUT = 3;
  BAD_CREDENTIAL = 4;
  TABLE_NOT_FOUND = 5;
  PHASE_INVALID = 6;
  NOT_CURRENT_PLAYER = 7;
  INVALID_PLAYED_CARDS = 8;
  PLAYED_CARDS_NOT_DOMINATING = 9;
  INVALID_PLAYER_STATE = 10;
  BAD_REFRESH_TOKEN = 11;
  PLAYER_NOT_FOUND = 12;
  PLAYER_IS_OFFLINE = 13;
}
